--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
     <header class="header">
         <div class="container header-container">
             <nav class="navigation">
-                <a class="logo link header-logo" href="./index.html" lang="en">Web<span class="header-logo-part">Studio</span></a>
+                <a class="logo link header__logo" href="./index.html" lang="en">Web<span class="header__logo_part">Studio</span></a>
                 <ul class="nav-list list">
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link active-page" href="./index.html">Студия</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link active-page" href="./index.html">Студия</a>
                     </li>
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="./portfolio.html">Портфолио</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="">Контакты</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul class="contact-list list">
-                <li class="contact-list-item">
-                    <a class="nav-list-link contact-list-link link" href="mailto:info@devstudio.com">
-                        <svg class="mail-icon contact-list-icon" width="16" height="12">
+            <ul class="contact-list nav-list list">
+                <li class="contact-list__item nav-list__item">
+                    <a class="nav-list__link contact-list__link link" href="mailto:info@devstudio.com">
+                        <svg class="mail-icon contact-list__icon" width="16" height="12">
                             <use href="./img/icons.svg#mail"></use>
                         </svg>
                         <span>info@devstudio.com</span>
                     </a>
                 </li>
-                <li class="contact-list-item">
-                    <a class="nav-list-link contact-list-link link" href="tel:+380961111111">
-                        <svg class="smartphone-icon contact-list-icon" width="10" height="16">
+                <li class="contact-list__item nav-list__item">
+                    <a class="nav-list__link contact-list__link link" href="tel:+380961111111">
+                        <svg class="smartphone-icon contact-list__icon" width="10" height="16">
                             <use href="./img/icons.svg#smartphone"></use>
                         </svg>
                         <span>+38 096 111 11 11</span>
@@ -68,41 +68,41 @@
         <section class="advantages section">
             <div class="container advantages-conatiner">
                 <ul class="advantages-list list-margins list">
-                    <li class="advantages-list-item list-item-margins">
+                    <li class="advantages-list__item list-item-margins">
                         <div class="icon-container">
-                            <svg class="advantages-icon" width="70" height="70">
+                            <svg class="advantages__icon" width="70" height="70">
                                 <use href="./img/icons.svg#antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-tittle third-rate-tittle">Внимание к деталям</h3>
-                        <p class="advantages-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="advantages__tittle third-rate-tittle">Внимание к деталям</h3>
+                        <p class="advantages__description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="advantages-list-item list-item-margins">
+                    <li class="advantages-list__item list-item-margins">
                         <div class="icon-container">
-                            <svg class="advantages-icon" width="70" height="70">
+                            <svg class="advantages__icon" width="70" height="70">
                                 <use href="./img/icons.svg#clock"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-tittle third-rate-tittle">Пунктуальность</h3>
-                        <p class="advantages-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="advantages__tittle third-rate-tittle">Пунктуальность</h3>
+                        <p class="advantages__description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="advantages-list-item list-item-margins">
+                    <li class="advantages-list__item list-item-margins">
                         <div class="icon-container">
-                            <svg class="advantages-icon" width="70" height="54">
+                            <svg class="advantages__icon" width="70" height="54">
                                 <use href="./img/icons.svg#diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-tittle third-rate-tittle">Планирование</h3>
-                        <p class="advantages-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="advantages__tittle third-rate-tittle">Планирование</h3>
+                        <p class="advantages__description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="advantages-list-item list-item-margins">
+                    <li class="advantages-list__item list-item-margins">
                         <div class="icon-container">
-                            <svg class="advantages-icon" width="70" height="70">
+                            <svg class="advantages__icon" width="70" height="70">
                                 <use href="./img/icons.svg#astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-tittle third-rate-tittle">Современные технологии</h3>
-                        <p class="advantages-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="advantages__tittle third-rate-tittle">Современные технологии</h3>
+                        <p class="advantages__description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>
