--- a/portfolio.html
+++ b/portfolio.html
@@ -22,32 +22,32 @@
     <header class="header">
         <div class="container header-container">
             <nav class="navigation">
-                <a class="logo link header-logo" href="./index.html" lang="en">Web<span
-                        class="header-logo-part">Studio</span></a>
+                <a class="logo link header__logo" href="./index.html" lang="en">Web<span
+                        class="header__logo_part">Studio</span></a>
                 <ul class="nav-list list">
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="./index.html">Студия</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="./index.html">Студия</a>
                     </li>
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link active-page" href="./portfolio.html">Портфолио</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link active-page" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="">Контакты</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul class="contact-list list">
-                <li class="contact-list-item">
-                    <a class="nav-list-link contact-list-link link" href="mailto:info@devstudio.com">
-                        <svg class="mail-icon contact-list-icon" width="16" height="12">
+            <ul class="contact-list nav-list list">
+                <li class="contact-list__item nav-list__item">
+                    <a class="nav-list__link contact-list__link link" href="mailto:info@devstudio.com">
+                        <svg class="mail-icon contact-list__icon" width="16" height="12">
                             <use href="./img/icons.svg#mail"></use>
                         </svg>
                         <span>info@devstudio.com</span>
                     </a>
                 </li>
-                <li class="contact-list-item">
-                    <a class="nav-list-link contact-list-link link" href="tel:+380961111111">
-                        <svg class="smartphone-icon contact-list-icon" width="10" height="16">
+                <li class="contact-list__item nav-list__item">
+                    <a class="nav-list__link contact-list__link link" href="tel:+380961111111">
+                        <svg class="smartphone-icon contact-list__icon" width="10" height="16">
                             <use href="./img/icons.svg#smartphone"></use>
                         </svg>
                         <span>+38 096 111 11 11</span>
